--- a/Flask_project/templates/index.html
+++ b/Flask_project/templates/index.html
@@ -24,6 +24,7 @@
     </ul>
     </p>
 </div>
+<a href="{{ url_for('add_product') }}" class="btn-add-product">Добавить новый продукт</a>
 
 <h2>Каталог товаров:</h2>
 <div class="products">
