--- a/Flask_project/templates/contact.html
+++ b/Flask_project/templates/contact.html
@@ -11,6 +11,6 @@
         <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
         <li><a href="https://www.twitter.com" target="_blank">Twitter</a></li>
     </ul>
-    <p><a href="/support">Обратиться в поддержку</a></p>
+    <a href="{{ url_for('misc.support') }}">Обратиться в поддержку</a>
 </div>
 {% endblock %}
