--- a/Flask_project/templates/index.html
+++ b/Flask_project/templates/index.html
@@ -24,13 +24,12 @@
     </ul>
     </p>
 </div>
-<a href="{{ url_for('product.add_product') }}" class="btn-add-product">Добавить новый продукт</a>
-
 <h2>Каталог товаров:</h2>
 <div class="products">
     {% for product in products %}
     <div class="product-card">
-        <a href="/product/{{ product.name|lower }}">
+        <a href="{{ url_for('product.product_detail', product_id=product.id) }}">
+
             <img src="{{ product.image }}" alt="{{ product.name }}">
             <h3>{{ product.name }}</h3>
         </a>
